--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ arc-swap = { version = "1", optional = true }
 rustls = { version = "0.23", default-features = false, optional = true }
 rustls-pki-types = { version = "1.7", optional = true }
 rustls-pemfile = { version = "2.1", optional = true }
-tokio-rustls = { version = "0.26", default-features = false, optional = true }
+tokio-rustls = { git = "https://github.com/LonerDan/tokio-rustls", rev = "d78ea0e6d9dd3e40cd9047cd63f8cc8f0dead193", default-features = false, optional = true }
 
 ## openssl
 openssl = { version = "0.10", optional = true }
